--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,7 @@
+html
+{
+    scroll-behavior: smooth;
+}
 .heading{
     color: red;
 }
@@ -9,3 +13,4 @@
 #london-heading{
     background-color: pink;
 }
+
